# [#19288] Fix: misaligned checkbox (thanks cerberus)
git-svn-id: file:///Users/oratzes/svn/kunena@3004 daf2aa89-cb5b-0410-b8ee-fe93ebc9b27d

--- a/trunk/1.6/components/com_kunena/template/default/css/kunena.forum.css
+++ b/trunk/1.6/components/com_kunena/template/default/css/kunena.forum.css
@@ -1253,7 +1253,7 @@ PX		EM			PCT			PT
 }
 #Kunena .kcheckbox {
 	float:right;
-	margin-right: 8px;
+	margin-right: -14px;
 	width: 20px;
 }
 
